--- a/index.html
+++ b/index.html
@@ -5,6 +5,24 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>webapp</title>
+    <script>
+      // URL 파라미터로 페이지 선택
+      const urlParams = new URLSearchParams(window.location.search);
+      const page = urlParams.get('page');
+      
+      if (page === 'original') {
+        // 원본 메인 HTML로 리다이렉트
+        window.location.href = '/original-main.html';
+      } else if (page === 'student') {
+        // 학생 페이지로 리다이렉트
+        window.location.href = '/original-student.html';
+      } else if (page === 'admin') {
+        // 관리자 페이지로 리다이렉트
+        window.location.href = '/original-admin.html';
+      } else {
+        // 기본은 React 테스트 페이지
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
