Fix: F5 새로고침 문제 해결 및 정적 빌드 구성 완료
- HTML 파싱 오류 수정 (중첩 주석 제거)
- Vite 빌드 시 static/ 폴더 자동 복사 기능 추가
- student.js의 세션 복원 로직이 빌드에 포함됨
- 배포 준비 완료

--- a/public/admin-v2.html
+++ b/public/admin-v2.html
@@ -2083,7 +2083,7 @@ repliesList.innerHTML = `
     <!-- 관리자 모듈들 -->
     <script src="static/api-wrapper.js"></script>
     <script src="static/admin-students.js"></script>
-    <!-- <script src="static/admin-roles.js"></script> <!-- 구문 오류로 임시 비활성화 --> -->
+    <!-- <script src="static/admin-roles.js"></script> 구문 오류로 임시 비활성화 -->
     <script src="static/admin-stage-config.js"></script>
     <script src="static/admin-guides.js"></script>
     <!-- <script src="test-admin-button.js"></script> -->
